style.css
/* 
-------------------
<<<<< GENERAL >>>>> 
-------------------
*/

/* <<< VARIABLES >>> */

:root {
  --search-icon: '<svg class="search-icon" viewBox="0 0 24 24"><path fill="currentColor" d="M9.5 4a6.5 6.5 0 0 1 6.5 6.5c0 1.62-.59 3.1-1.57 4.23l5.65 5.65l-.71.71l-5.65-5.65A6.469 6.469 0 0 1 9.5 17A6.5 6.5 0 0 1 3 10.5A6.5 6.5 0 0 1 9.5 4m0 1A5.5 5.5 0 0 0 4 10.5A5.5 5.5 0 0 0 9.5 16a5.5 5.5 0 0 0 5.5-5.5A5.5 5.5 0 0 0 9.5 5Z"/></svg>';
}

@font-face {
  font-family: 'Sacramento';
  src: url('fonts/Sacramento-Regular.ttf');
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  font-size: 16px;
  scroll-behavior: smooth;
}

input,
button,
a {
  cursor: pointer;
}

a {
  text-decoration: none;
  color: inherit;
}

.d-none {
  display: none !important;
}

body {
  font-family: 'Karla', sans-serif;
  font-weight: 300;
  background: linear-gradient(312deg, #1f836f, #0b3431);
}

/* 
-------------------
<<<<< HEADER >>>>> 
-------------------
*/

header {
  display: flex;
  align-items: center;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  padding: 0 8rem;
  height: 5rem;
  box-shadow: 0px 4px 8px 0px rgba(30, 39, 35, 0.175);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 100;
  background: linear-gradient(312deg, #117460, #0e403d);
}

.top-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

h1 {
  font-family: 'Sacramento', cursive;
  font-size: 2.75rem;
  font-weight: 550;
  color: #dbe4d9;
  text-shadow: 2px 2px 2px rgba(18, 44, 38, 0.2);
}

header input {
  height: 2.25rem;
  width: 14rem;
  font-weight: 100;
  font-size: 1.125rem;
  padding: 0 1.6rem;
  border: none;
  background-color: #e9f1f0;
  color: #485951;
  border-radius: 4px;
  outline: none;
  margin-bottom: 0.25rem;
}

header input::placeholder {
  display: flex;
  justify-content: space-around;
  align-items: center;
  background-image: url(img/icons/search-icon.png);
  background-size: 1.25rem;
  background-repeat: no-repeat;
}

header ::placeholder {
  text-align: right;
  font-size: 1.125rem;
  font-weight: 100;
  color: #bbcac7;
}

.nav-links {
  display: flex;
  justify-content: space-between;
  gap: 0.5rem;
}

.nav-links img:not(:last-of-type) {
  cursor: pointer;
}

.nav-links img:last-of-type {
  width: 40px;
  aspect-ratio: 1, 1;
  border-radius: 50%;
  cursor: pointer;
  outline: transparent solid 2.5px;
  outline-offset: 2px;
  transition: all 0.1s ease-in-out;
}

.nav-links img:last-of-type:hover {
  outline-color: #dbe4d9;
}

.nav-links img:not(:last-of-type):hover {
  filter: invert(98%) sepia(69%) saturate(95%) hue-rotate(43deg) brightness(93%)
    contrast(92%);
}

/* 
------------------------
<<<<< MAIN-SECTION >>>>> 
------------------------
*/

main {
  margin-top: 5rem;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
  min-height: calc(100vh - 5rem);
  padding: 2rem 8rem 1rem;
  display: flex;
  align-items: start;
  gap: 2rem;
  min-height: 100vh;
}

.pinboard {
  width: 67%;
}

.card {
  border-radius: 0.5rem;
  background-color: #dbe4d9;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
  padding-bottom: 1rem;
  margin-bottom: 1rem;
}

.card-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 1rem;
}

.card-header--author {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 1rem;
}

.card-header-author--img {
  width: 2.5rem;
  height: 2.5rem;
  outline: #485951 solid 2px;
  outline-offset: 2px;
  border-radius: 50%;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
}

.card-header__svg {
  cursor: pointer;
}

.card-poster img {
  width: 100%;
  aspect-ratio: 1 / 1;
}

.social-actions {
  display: flex;
  justify-content: space-between;
  width: 100%;
  gap: 0.5rem;
  padding: 0.5rem 1rem 0.5rem;
}

.icons-inline {
  width: calc(100% - 36px - 1rem);
  display: flex;
  gap: 1rem;
}

.social-actions img {
  width: 36px;
  height: 36px;
  filter: invert(12%) sepia(20%) saturate(400%) hue-rotate(97deg)
    brightness(97%) contrast(90%);
}

.comment-section {
  display: flex;
  flex-direction: column;
  gap: 0.375rem;
  padding: 0 1rem;
}

.like-counter {
  font-weight: 600;
}

.author,
.user {
  font-weight: 600;
}

.like-btn {
  display: flex;
  justify-content: center;
  align-items: flex-start;
  cursor: pointer;
  width: 36px;
}

.like-btn svg {
  width: 20px;
}

.author-commentary {
  display: flex;
}
.user-commentary {
  display: flex;
  flex-direction: column;
  width: 100%;
  gap: 0.375rem;
  padding-bottom: 1rem;
}

/* .user-comment-container {
  display: flex;
} */

.user-comment-container {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.user-comment {
  display: flex;
  width: calc(100% - 36px - 1rem);
}

.author-commentary--author,
.user-commentary--user {
  font-weight: 600;
}

.all-comments {
  padding-bottom: 0.5rem;
  cursor: pointer;
  width: auto;
}

.greyed {
  color: #6a6a6a;
  font-size: 0.85rem;
  font-weight: 600;
}

.post-container {
  display: flex;
  padding: 1rem 1rem 0 1rem;
  width: 100%;
  border-top: #7b978a solid 0.125px;
}

.input-bar {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.comment-input {
  display: flex;
  justify-content: flex-start;
  width: calc(100% - 36px - 1rem);
}

.comment-input {
  height: 1.75rem;
  font-weight: 200;
  font-size: 1rem;
  color: #485951;
  padding: 0 1.6rem;
  border: none;
  background-color: #e9f1f0;
  border-radius: 4px;
}

.input-bar ::placeholder {
  text-align: left;
  font-size: 1rem;
  font-weight: 100;
  color: #bbcac7;
}

.post-btn {
  display: flex;
  align-items: center;
  height: 1.75rem;
  font-size: 1rem;
  font-weight: 500;
  text-align: right;
  color: #117460;
  border: none;
  background-color: transparent;
  transition: all 0.15s ease-in-out;
}

.post-btn:hover {
  /* color: #0cdbc0; */
  text-shadow: rgba(7, 101, 89, 0.25) 0px 0px 8px;
  padding-right: 0.25rem;
}

/* 
-------------------
<<<<< ASIDE >>>>> 
-------------------
*/

aside {
  display: flex;
  flex-direction: column;
  width: calc(33%);
  position: sticky;
  top: 7rem;
}

.right-column {
  overflow: auto;
}

.wrapper {
  padding: 0.25rem 1rem 0 1rem;
  margin-bottom: 1.125rem;
}

.myprofile {
  display: flex;
  align-items: center;
}

.my-info-box {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.myprofile__img {
  width: 3.5rem;
  height: 3.5rem;
  outline: #dbe4d9 solid 2px;
  outline-offset: 2px;
  border-radius: 50%;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
  margin-right: 1rem;
}

.myusername {
  font-size: 1.125rem;
  font-weight: 600;
  color: #dbe4d9;
}

.myrealname {
  font-size: 1.125rem;
  font-weight: 400;
  color: #969c95;
}

.story-section,
.suggestion-section {
  display: flex;
  flex-direction: column;
  height: fit-content;
  border-radius: 0.5rem;
  background-color: #dbe4d9;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
  padding: 0.75rem 1rem;
  margin-bottom: 1rem;
  transition: all 0.3s ease;
}

.stories-container,
.suggested-container {
  padding: 0.25rem;
  overflow: hidden;
}

.scroll {
  overflow: auto;
}

.no-scroll {
  overflow: hidden;
}

@keyframes fold {
  to {
    height: 2.75rem;
  }
}

@keyframes unfold {
  to {
    max-height: 25.25rem;
  }
}

@keyframes defaultHeight {
  to {
    max-height: 14rem;
  }
}

.fold {
  animation: 0.3s fold ease;
}

.unfold {
  animation: 0.3s unfold ease;
}

.default {
  animation: 0.3s defaultHeight ease;
}

.folded {
  height: 2.75rem !important;
}

.unfolded {
  max-height: 25.25rem;
}

.default-height {
  max-height: 14rem;
}

.suggestions-header,
.stories-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 0.75rem;
  color: #5a5a5a;
}

.stories-header span,
.suggestions-header span {
  color: #000;
  cursor: pointer;
  transition: all 0.15s ease-in-out;
}

.stories-header span:hover,
.suggestions-header span:hover {
  padding-right: 0.25rem;
}

.suggested {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 1.125rem;
}

.suggested-profile__img {
  width: 2.5rem;
  height: 2.5rem;
  outline: #485951 solid 2px;
  outline-offset: 2px;
  border-radius: 50%;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
  margin-right: 1rem;
}

.story-profile__img {
  width: 2.5rem;
  height: 2.5rem;
  outline: #db783b solid 2px;
  outline-offset: 2px;
  border-radius: 50%;
  box-shadow: 2px 2px 8px rgba(18, 44, 38, 0.35);
  margin-right: 1rem;
}

.user-info-box {
  display: flex;
  align-items: center;
}

.username-and-update {
  display: flex;
  flex-direction: column;
  gap: 0.375rem;
}

.story {
  display: flex;
  align-items: center;
  margin-bottom: 1.125rem;
}

.switch-btn {
  font-weight: 500;
  color: #dbe4d9;
  height: 1rem;
  transition: all 0.15s ease-in-out;
}

.switch-btn:hover {
  padding-right: 0.25rem;
}

.follow-btn {
  font-weight: 500;
  color: #117460;
  height: 1rem;
  transition: all 0.15s ease-in-out;
}

.follow-btn:hover {
  padding-right: 0.25rem;
}

.flex-spread {
  display: flex;
  justify-content: space-between;
}

